--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  padding-bottom: constant(safe-area-inset-bottom); /* 兼容 iOS < 11.2 */
+  padding-bottom: env(safe-area-inset-bottom); /* 兼容 iOS >= 11.2 */
+  padding-top: constant(safe-area-inset-top); /* 兼容 iOS < 11.2 */
+  padding-top: env(safe-area-inset-top); /* 兼容 iOS >= 11.2 */
 }
 
 code {
